--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="#">Alejandro HB</a>
+            <!--use of image-->
+            <a class="navbar-brand mr-auto" href="#"><img src="img/Alex-HB.png" height="41" width="41"></a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
                         <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-home fa-lg"></span> Home</a></li>
@@ -35,14 +36,21 @@
     </nav>
     <header>
         <div class = "jumbotron">
-            <div class = "row row-header align-items-center">
-                <div>
-                    <header >
-                        <h1>My Portfolio</h1>
-                        <p>By Alejandro Hidalgo Badillo</p>
-                    </header>
+            <div class = "container">
+                <div class = "row row-header">
+            
+                        <div class ="col-12 col-sm-6">
+                            <h1>My Portfolio</h1>
+                            <p>By Alejandro Hidalgo Badillo</p>
+                        </div>
+                        <div class=" col-sm align-self-center">
+                            <!--use of image-->
+                            <img src="img/Alex-HB.png" height="100" width="100" class="img-fluid" >
+                        </div>
+                    
                 </div>
             </div>
+
         </div>
     </header>
 
@@ -51,9 +59,16 @@
             <div>
                 <h3>Who am I</h3>
             </div>
-            <div>
-                <h2>Uthappizza</h2>
-                <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+            <div class="media">
+                <img class="d-flex mr-3 img-thumbnail align-self-center"
+                        src="img/Auto Food.png" alt="AutoFood">
+                <div class="media-body">
+                    <h2 class="mt-0">Auto Food <span class="badge badge-danger">HOT</span><span class="badge badge-pill badge-secondary">2022</span></h2>
+                    <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
+                        Italian pizza, topped with Cerignola olives, ripe vine
+                        cherry tomatoes, Vidalia onion, Guntur chillies and
+                        Buffalo Paneer.</p>
+                </div>
             </div>
         </div>
 
@@ -72,10 +87,18 @@
             <div>
                 <h3>Meet our Culinary Specialists</h3>
             </div>
-            <div>
-                <h2>Alberto Somayya</h2>
-                <h4>Executive Chef</h4>
-                <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+            <div class="media">
+                <img class="d-flex mr-3 img-thumbnail align-self-center"
+                        src="img/Alex.jpeg"  height="200" width="200" alt="Alberto Somayya">
+                <div class="media-body">
+                    <h2 class="mt-0">Alberto Somayya</h2>
+                    <h4>Executive Chef</h4>
+                    <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide
+                        International experience having worked closely with
+                        whos-who in the culinary world, he specializes in
+                        creating mouthwatering Indo-Italian fusion experiences.
+                        </p>
+                </div>
             </div>
         </div>
     </div>
